Add engage of positions/instants (progetto finale)

--- a/progetto_finale/bibliografia.bib
+++ b/progetto_finale/bibliografia.bib
@@ -6,3 +6,9 @@
   pages={88--98},
   year={2006}
 }
+@misc{hbird,
+  title = {See Hummingbirds Fly, Shake, Drink in Amazing Slow Motion},
+  author = {National Geographic},
+  howpublished = {\url{https://youtu.be/RtUQ_pz5wlo}},
+  note = {Accessed: 2020-02-01}
+}
