--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -59,6 +59,61 @@ dei seguenti argomenti:
       (es. lunghezza, tempo)
 \end{itemize}
 
+\chapter{Posizioni, Istanti e intervalli}
+Nel presente modulo lo studente familiarizza con i concetti
+di posizione, distanza, istante (inteso come
+\emph{lettura di orologio}) e intervallo di tempo.
+Succesivamente, guidato dal docente, esplora le relazioni
+che intercorrono tra queste grandezze nel contesto del moto di
+un corpo, giungendo ad una comprensione qualitativa dei
+concetti di \emph{evento} e \emph{legge oraria}.
+
+\section{Engage}
+\begin{itemize}
+\item \textbf{Tempo richiesto:} 15 min.
+\item \textbf{Materiale:} Computer
+\end{itemize}
+
+Il docente mostra agli studenti
+\footnote{
+Nel contesto della DAD, il docente può utilizzare
+una piattaforma web di videotelefonia, che supporti la condivisione
+di file multimediali. Jitsi Meet\textsuperscript{\textregistered},
+Zoom\textsuperscript{\textregistered},
+Google Meet\textsuperscript{\textregistered} e
+Microsoft Teams\textsuperscript{\textregistered}
+sono solo alcuni esempi.
+}
+il video di un fenomeno fisico riprodotto \emph{in reverse} (ovvero ribaltando
+l'asse temporale). Il fenomeno fisico rappresentato dovrebbe essere scelto
+in modo che sia difficile (o impossibile) distinguere se il video viene
+riprodotto in reverse oppure no. Il moto di un pendolo semplice,
+di un \emph{pendulum wave} o di altri moti periodici costituiscono buoni
+esempi.
+
+Nel contesto di questo progetto si è scelto il video in \emph{slow motion}
+di un colibrì in volo, che si nutre da un tubicino (Figura \ref{fig:hummingbird}) 
+\footnote{
+\`E possibile scaricare il video presso
+\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/Hummingbird.mp4?raw=true}{questa pagina web}
+. L'indirizzo del video originale si trova nella bibliografia\cite{hbird}.
+}
+. Solamente la componente video, e non quella audio, è stata inverta per
+aumentare l'effetto di inganno.
+
+\begin{figure}
+\centering
+  \includegraphics[width=\textwidth]{Hummingbird}
+  \caption{Un frame del video di un colibrì in volo che si nutre da un tubicino.}
+  \label{fig:hummingbird}
+\end{figure}
+
+Il docente in seguito chiede agli studenti di descrivere quanto viene
+visualizzato, e solamente infine svela che il video è riprodotto in
+reverse. In questo modo l'insegnante ha l'occasione di far notare
+allo studente, e lo esplicita, che per studiare qualsiasi fenomeno fisico
+occorrono chiari riferimenti spaziali e temporali.
+
 
 \bibliography{bibliografia}{}
 \bibliographystyle{plain}
