Add extend of positions/istants (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -114,6 +114,45 @@ reverse. In questo modo l'insegnante ha l'occasione di far notare
 allo studente, e lo esplicita, che per studiare qualsiasi fenomeno fisico
 occorrono chiari riferimenti spaziali e temporali.
 
+\section{Extend}
+\begin{itemize}
+\item \textbf{Tempo richiesto:} 30 min.
+\item \textbf{Materiale:} Computer, Oggetti domestici
+\end{itemize}
+
+In questa fase si proprone un attività mirata ad estendere la consapevolezza
+degli studente riguardo ad alcuni concetti presentati precedentemente.
+In particolare si desidera estendere l'idea di posizione, che lo studente ha maturato,
+allo spazio tridimensiosale.
+
+L'insegnante chiede a ciascuno studente di scegliere un oggetto nella stanza e di
+spiegare alla classe, con le proprie parole, dove questo eggetto si trovi.
+Lo studente potrebbe utilizzare altri oggetti nella stanza come riferimenti spaziali,
+dicendo ad esempio ``L'oggetto si trova accanto alla finestra'', oppure
+``L'oggetto si trova sopra il tavolo''; o forse potrebbe usare se stesso come
+riferimento affermando ``L'oggetto si trova alla mia destra, in alto''.
+A questo punto il docente chiede di scegliere altri due o tre oggetti,
+e fa la stessa richiesta di localizzazione. Ci si aspetta che lo studente
+si renda conto dell'impossibilità di creare nella propria mente un'idea della stanza
+degli altri compagni e della posizione di tutti gli oggetti che loro hanno scelto, senza che
+costoro esplicitino un riferimento spaziale univoco, e per ogni oggetto indichino tre distanze
+misurate o stimate dal riferimento scelto.
+L'insegnante dovrebbe guidare gli studenti in questo processo ponendo domande e fornendo suggerimenti
+come: ``Dove si trova l'oggetto A rispetto all'oggetto B? E rispetto all'oggetto C?'',
+oppure ``Dire che l'oggetto A si trova un metro sopra l'oggetto B è sufficiente
+a far comprendere al tuo compagno la posizione dell'oggetto B all'interno della stanza?''
+e ancora ``Forse potremmo dire che l'ogetto B si trova sopra l'oggetto A, ma anche alla sua destra
+e qualche metro più avanti''.
+Al termine di questo processo, il docente ufficializza la conoscenza acquisita disegnando
+\footnote{
+Il professore può disegnare su una lavagna e filmarsi durante l'operazione, oppure
+utilizzare una tavolatta grafica o una lavagna virtuale (presente in software
+come Zoom\textsuperscript{\textregistered}, ad esempio)
+}          
+un diagramma cartesiano tridimensionale, collocando alcuni oggetti al suo interno
+e osservando che la posizione dell'oggetto preso come riferimento per tutti gli altri
+si chiama \emph{origine} e le tre distanze sono rappresentate da tre numeri lungo
+gli assi, chiamati \emph{coordinate cartesiane} tridimensionali.
 
 \bibliography{bibliografia}{}
 \bibliographystyle{plain}
