Add bibliography in toc (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -156,5 +156,6 @@ gli assi, chiamati \emph{coordinate cartesiane} tridimensionali.
 
 \bibliography{bibliografia}{}
 \bibliographystyle{plain}
+\addcontentsline{toc}{chapter}{Bibliografia}
 
 \end{document}
