Fix some typos (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -22,8 +22,8 @@ Copyright Daniele Melocchi, Agnese Montanaro, Matteo Savatteri -
 \tableofcontents
 
 \chapter{Introduzione}
-Questo documento presenta un ciclo di lezioni svolte nella modalità
-della didattica a distanza (\emph{DAD}) e
+Questo documento presenta un ciclo di lezioni svolte in modalità
+di didattica a distanza (\emph{DAD}) e
 indirizzate ad una classe 1\textsuperscript{a} Liceo Scientifico,
 riguardanti le basi della cinematica, il moto rettilineo uniforme
 e uniformemente accelerato.
@@ -59,12 +59,12 @@ dei seguenti argomenti:
       (es. lunghezza, tempo)
 \end{itemize}
 
-\chapter{Posizioni, Istanti e intervalli}
+\chapter{Posizioni, Istanti e Intervalli}
 Nel presente modulo lo studente familiarizza con i concetti
 di posizione, distanza, istante (inteso come
 \emph{lettura di orologio}) e intervallo di tempo.
 Succesivamente, guidato dal docente, esplora le relazioni
-che intercorrono tra queste grandezze nel contesto del moto di
+che intercorrono tra queste nozioni nel contesto del moto di
 un corpo, giungendo ad una comprensione qualitativa dei
 concetti di \emph{evento} e \emph{legge oraria}.
 
@@ -98,7 +98,7 @@ di un colibrì in volo, che si nutre da un tubicino (Figura \ref{fig:hummingbird
 \href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/Hummingbird.mp4?raw=true}{questa pagina web}
 . L'indirizzo del video originale si trova nella bibliografia\cite{hbird}.
 }
-. Solamente la componente video, e non quella audio, è stata inverta per
+. Solamente la componente video, e non quella audio, è stata invertita per
 aumentare l'effetto di inganno.
 
 \begin{figure}
