Change sintax of some sentences (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -40,10 +40,10 @@ qualitativo, per passare ad uno via via più quantitativo:
 \end{enumerate}
 
 Il percorso si fonda sul \emph{modello didattico delle 5E}\cite{bybee2006bscs}.
-Ogni modulo si suddivide dunque in cinque sezioni, nelle quali sono presentate
-attività, riflessioni, suggerimenti e problematiche, per ciascuna delle
-cinque fasi di questo metodo di natura \emph{inquiry}:
-\emph{engage}, \emph{explore}, \emph{explain}, \emph{extend}, \emph{evaluate}.
+Ogni modulo si suddivide dunque in cinque fasi, nelle quali sono presentate
+attività, riflessioni, suggerimenti e problematiche affrontate, per ciascuna
+di queste: \emph{engage}, \emph{explore}, \emph{explain}, \emph{extend},
+\emph{evaluate}.
 
 \section{Propedeuticità}
 Al fine della buona riuscita di questo percorso, è necessario che gli
@@ -132,9 +132,9 @@ dicendo ad esempio ``L'oggetto si trova accanto alla finestra'', oppure
 ``L'oggetto si trova sopra il tavolo''; o forse potrebbe usare se stesso come
 riferimento affermando ``L'oggetto si trova alla mia destra, in alto''.
 A questo punto il docente chiede di scegliere altri due o tre oggetti,
-e fa la stessa richiesta di localizzazione. Ci si aspetta che lo studente
-si renda conto dell'impossibilità di creare nella propria mente un'idea della stanza
-degli altri compagni e della posizione di tutti gli oggetti che loro hanno scelto, senza che
+e fa la stessa richiesta di localizzazione. Lo studente si renderà
+conto dell'impossibilità di creare nella propria mente un'idea della stanza
+degli altri compagni e della posizione di tutti gli oggetti, senza che
 costoro esplicitino un riferimento spaziale univoco, e per ogni oggetto indichino tre distanze
 misurate o stimate dal riferimento scelto.
 L'insegnante dovrebbe guidare gli studenti in questo processo ponendo domande e fornendo suggerimenti
