Add some propedeutics (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -51,12 +51,15 @@ studenti coinvolti abbiano affrontato e consolidato la comprensione
 dei seguenti argomenti:
 \begin{itemize}
 \item Operazioni algebriche elementari (es. frazioni e potenze).
+\item Polinomi.
 \item Equazioni di primo grado.
 \item Rappresentazioni di numeri su un asse ordinato.
 \item Rappresentazione di coppie di numeri (punti) su un diagramma
       cartesiano.
-\item Conoscenza di unità di misura di grandezze fondamentali.
+\item Conoscenza di grandezze fondamentali.
       (es. lunghezza, tempo)
+\item Conoscenza di unità di misura di grandezze fondamentali.
+      (es. metro, secondo)
 \end{itemize}
 
 \chapter{Posizioni, Istanti e Intervalli}
