Use minute symbol not "min." (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -73,7 +73,7 @@ concetti di \emph{evento} e \emph{legge oraria}.
 
 \section{Engage}
 \begin{itemize}
-\item \textbf{Tempo richiesto:} 15 min.
+\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
 \item \textbf{Materiale:} Computer
 \end{itemize}
 
@@ -119,7 +119,7 @@ occorrono chiari riferimenti spaziali e temporali.
 
 \section{Extend}
 \begin{itemize}
-\item \textbf{Tempo richiesto:} 30 min.
+\item \textbf{Tempo richiesto in aula:} 30\textsuperscript{$\prime$}
 \item \textbf{Materiale:} Computer, Oggetti domestici
 \end{itemize}
 
