Change bibliography section name (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -9,6 +9,8 @@
 
 \usepackage{hyperref}
 
+\addto\captionsitalian{\renewcommand{\bibname}{Riferimenti}}
+
 \title{Title} \author{Daniele Melocchi\\Agnese Montanaro\\Matteo
 Savatteri}
 
@@ -211,6 +213,6 @@ gli assi, chiamati \emph{coordinate cartesiane} tridimensionali.
 
 \bibliography{bibliografia}{}
 \bibliographystyle{plain}
-\addcontentsline{toc}{chapter}{Bibliografia}
+\addcontentsline{toc}{chapter}{Riferimenti}
 
 \end{document}
