Fix some errors (progetto finale)

--- a/progetto_finale/bibliografia.bib
+++ b/progetto_finale/bibliografia.bib
@@ -10,5 +10,5 @@
   title = {See Hummingbirds Fly, Shake, Drink in Amazing Slow Motion},
   author = {National Geographic},
   howpublished = {\url{https://youtu.be/RtUQ_pz5wlo}},
-  note = {Accessed: 2020-02-01}
+  note = {Data consultazione: 2021-02-01}
 }
