Use the word "utilizzare" instead of "usare" (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -134,7 +134,7 @@ L'insegnante chiede a ciascuno studente di scegliere un oggetto nella stanza e d
 spiegare alla classe, con le proprie parole, dove questo eggetto si trovi.
 Lo studente potrebbe utilizzare altri oggetti nella stanza come riferimenti spaziali,
 dicendo ad esempio ``L'oggetto si trova accanto alla finestra'', oppure
-``L'oggetto si trova sopra il tavolo''; o forse potrebbe usare se stesso come
+``L'oggetto si trova sopra il tavolo''; o forse potrebbe utilizzare se stesso come
 riferimento affermando ``L'oggetto si trova alla mia destra, in alto''.
 A questo punto il docente chiede di scegliere altri due o tre oggetti,
 e fa la stessa richiesta di localizzazione. Lo studente si renderà
