Add extend of acceleration (progetto finale)

--- a/progetto_finale/bibliografia.bib
+++ b/progetto_finale/bibliografia.bib
@@ -12,3 +12,20 @@
   howpublished = {\url{https://youtu.be/RtUQ_pz5wlo}},
   note = {Data consultazione: 2021-02-01}
 }
+@book{arons1997teaching,
+  title={Teaching introductory physics},
+  author={Arons, Arnold B and Redish, Edward F},
+  year={1997},
+  publisher={Wiley New York},
+  note = {Capitolo 2}
+}
+@article{trowbridge1981investigation,
+  title={Investigation of student understanding of the concept of acceleration in one dimension},
+  author={Trowbridge, David E and McDermott, Lillian C},
+  journal={American journal of Physics},
+  volume={49},
+  number={3},
+  pages={242--253},
+  year={1981},
+  publisher={American Association of Physics Teachers}
+}
