--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -159,6 +159,112 @@ e osservando che la posizione dell'oggetto preso come riferimento per tutti gli 
 si chiama \emph{origine} e le tre distanze sono rappresentate da tre numeri lungo
 gli assi, chiamati \emph{coordinate cartesiane} tridimensionali.
 
+\chapter{Accelerazione, Moto Rettilineo Uniformemente Accelerato}
+\section{Explain}\label{a_explain}
+
+\section{Extend}
+\begin{itemize}
+\item \textbf{Tempo richiesto in aula:} 60\textsuperscript{$\prime$}
+\item \textbf{Materiale:} Smartphone, Computer, Oggetti domestici
+\end{itemize}
+
+In questa fase si desidera che lo studente estenda la sua consapevolezza
+riguardo il concetto di accelerazione. La letteratura documenta una difficoltà
+in una frazione significativa degli studenti nel distinguere tra velocità
+e accelerazione. Tale difficoltà si manifesta in particolare nello studio
+del fenomeno conosciuto come \emph{Top of the Flight}, o in generale
+in tutti i casi nei quali si verifica che la velocità istantanea sia nulla
+e contemporaneamente l'accelerazione non lo sia\cite{arons1997teaching}
+\cite{trowbridge1981investigation}.
+
+Gli studenti hanno già fatto esperienza di questa situazione nella Sezione
+\ref{a_explain}, durante l'analisi dell'esperimento della bicicletta che
+scende da una rampa. Quando la bicicletta si trova ferma in cima alla rampa
+e inizia la sua discesa, per un solo istante (quello iniziale) la sua velocità
+è nulla, mentre la sua accelerazione ha un valore non nullo, che rimmarrà costante
+lungo tutta la discesa.
+
+L'insegnante presenta alla classe un surrogato in scala dell'esperimento della
+bicicletta, perché possa essere studiato con l'applicazione per smartphone
+\emph{Phyphox}
+\footnote{
+          Phyphox è un applicazione \emph{Free Software} per dispositivi mobili
+          (Sistemi supportati Android e IOS) che trasforma il proprio
+          smartphone in un piccolo laboratorio di fisica. Maggiori
+          informazioni e documentazione sono reperibili presso
+          \href{https://phyphox.org/}{questa pagina web}.
+         }
+. In principio il docente presenta agli studenti l'app, mostrando loro dove
+reperirla e le sue funzioni, in particolare lo strumento di misura
+\emph{Acceleration (Whitout g)} (Figura \ref{fig:phyphox}) e la funzione
+\emph{Save experiment state}.
+L'insegnate dovrebbe mostrare un rapido, ma efficave esempio pratico
+di utilizzo di questo strumento, per esempio attivando la funzione
+di registrazione dati, lanciando in aria il telefono, riprendendolo
+al volo e mostrando il risultato agli studenti.
+
+\begin{figure}[H]
+\centering
+  \includegraphics[width=\textwidth]{phyphox}
+  \caption{La schermata dello strumento \emph{Acceleration (Whitout g)}
+           nell'applicazione Phyphox.}
+  \label{fig:phyphox}
+\end{figure}
+
+In seguito il professore assegna agli studenti un compito da eseguire
+a casa: indica agli studenti di scegliere una superfice inclinata
+e priva di attrito,
+\footnote{
+          Si ricorda che gli studenti di una classe prima liceo
+          non hanno familiarità con il concetto di attrito,
+          dunque il professore dovrebbe utilizzare termini differenti
+          come ``Superficie inclinata e liscia''.
+         }
+e di far scivolare il telefono lungo la superficie, attivando
+la registrazione dati dello strumento appena mostrato.
+Il compito di scegliere l'inclinazione del piano, il modo in cui
+collocare il telefono sopra di esso, e altre osservazioni pratiche
+sono lasciate allo studente.
+
+Durante la lezione successiva l'insegnate chiede agli studenti
+di condividere la propria esperienza e di spiegare l'interpretazione
+che questi danno ai grafici prodotti dall'applicazione.
+Il docente dovrebbe aver riprodotto l'esperienza, in modo
+da poter presentare agli studenti i propri risultati in una
+forma più adatta alla comprensione degli stessi.
+Si ritiene che grafici prodotti da Phyphox siano utili,
+in quanto immediati, ma di difficile interpretazione
+per uno studente. Il docente potrà esportare i propri
+dati nel formato preferito grazie alla funzione
+\emph{Export Data}, e in seguito analizzarli con uno
+strumento di propria scelta.
+Una possibile analisi è mostrata nella Figura \ref{fig:a_phyphox}.
+
+
+\begin{figure}[H]
+\centering
+  \includegraphics[width=\textwidth]{a_phyphox}
+  \caption{Il plot, realizzato con il modulo \emph{Matplotlib}
+           del linguaggio di programmazione \emph{Python},
+           mostra l'accelerazione lungo il piano misurata da
+           Phyphox. I dati sono stati mediati nel tempo
+           per rimuovere il rumore e un fit lineare è stato
+           eseguito sulla coda.
+          }
+  \label{fig:a_phyphox}
+\end{figure}
+
+Il professore aiuta gli studenti ad analizzare il grafico ponendo
+alcune domande: ``Riuscite ad individuare nel grafico l'istante
+in cui il telefono è stato lasciato libero di scivolare?'',
+``Quando vale l'accelerazione prima che il telefono inizi a
+scivolare?'', ``Quanto vale l'accelerazione nell'istante
+in cui il telefono viene lasciato scivolare, ma è ancora fermo,
+ovvero la sua velocità vale zero?'', ``E mentre il telefono sta
+scivolando?''. In questo modo egli guida gli studenti verso
+la realizzazione che un corpo avente velocità nulla ad un certo
+istante, non necessariamente deve avere anche un'accelerazione nulla.
+
 \appendix
 \chapter{Analisi Dati}
 \section{Moto Rettilineo Uniforme}
