Change positions/instants chapter title (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -64,7 +64,7 @@ dei seguenti argomenti:
       (es. metro, secondo)
 \end{itemize}
 
-\chapter{Posizioni, Istanti e Intervalli}
+\chapter{Posizioni, Istanti, Distanze, Intervalli Temporali} \label{posizioni_istanti}
 Nel presente modulo lo studente familiarizza con i concetti
 di posizione, distanza, istante (inteso come
 \emph{lettura di orologio}) e intervallo di tempo.
