Fix some typos (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -97,13 +97,13 @@ di un \emph{pendulum wave} o di altri moti periodici costituiscono buoni
 esempi.
 
 Nel contesto di questo progetto si è scelto il video in \emph{slow motion}
-di un colibrì in volo, che si nutre da un tubicino (Figura \ref{fig:hummingbird}) 
+di un colibrì in volo, che si nutre da un tubicino (Figura \ref{fig:hummingbird})
 \footnote{
 \`E possibile scaricare il video presso
 \href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/Hummingbird.mp4?raw=true}{questa pagina web}
 . L'indirizzo del video originale si trova nella bibliografia\cite{hbird}.
-}
-. Solamente la componente video, e non quella audio, è stata invertita per
+}.
+Solamente la componente video, e non quella audio, è stata invertita per
 aumentare l'effetto di inganno.
 
 \begin{figure}
@@ -152,8 +152,8 @@ Al termine di questo processo, il docente ufficializza la conoscenza acquisita d
 \footnote{
 Il professore può disegnare su una lavagna e filmarsi durante l'operazione, oppure
 utilizzare una tavolatta grafica o una lavagna virtuale (presente in software
-come Zoom\textsuperscript{\textregistered}, ad esempio)
-}          
+come Zoom\textsuperscript{\textregistered}, ad esempio).
+}
 un diagramma cartesiano tridimensionale, collocando alcuni oggetti al suo interno
 e osservando che la posizione dell'oggetto preso come riferimento per tutti gli altri
 si chiama \emph{origine} e le tre distanze sono rappresentate da tre numeri lungo
@@ -193,8 +193,8 @@ bicicletta, perché possa essere studiato con l'applicazione per smartphone
           smartphone in un piccolo laboratorio di fisica. Maggiori
           informazioni e documentazione sono reperibili presso
           \href{https://phyphox.org/}{questa pagina web}.
-         }
-. In principio il docente presenta agli studenti l'app, mostrando loro dove
+         }.
+In principio il docente presenta agli studenti l'app, mostrando loro dove
 reperirla e le sue funzioni, in particolare lo strumento di misura
 \emph{Acceleration (Whitout g)} (Figura \ref{fig:phyphox}) e la funzione
 \emph{Save experiment state}.
@@ -213,13 +213,13 @@ al volo e mostrando il risultato agli studenti.
 
 In seguito il professore assegna agli studenti un compito da eseguire
 a casa: indica agli studenti di scegliere una superfice inclinata
-e priva di attrito,
+e priva di attrito
 \footnote{
           Si ricorda che gli studenti di una classe prima liceo
           non hanno familiarità con il concetto di attrito,
           dunque il professore dovrebbe utilizzare termini differenti
           come ``Superficie inclinata e liscia''.
-         }
+         },
 e di far scivolare il telefono lungo la superficie, attivando
 la registrazione dati dello strumento appena mostrato.
 Il compito di scegliere l'inclinazione del piano, il modo in cui
