Add explore of positions/istants (progetto finale)

--- a/progetto_finale/bibliografia.bib
+++ b/progetto_finale/bibliografia.bib
@@ -29,3 +29,13 @@
   year={1981},
   publisher={American Association of Physics Teachers}
 }
+@article{beichner1994testing,
+  title={Testing student interpretation of kinematics graphs},
+  author={Beichner, Robert J},
+  journal={American journal of Physics},
+  volume={62},
+  number={8},
+  pages={750--762},
+  year={1994},
+  publisher={American Association of Physics Teachers}
+}
