--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -119,6 +119,125 @@ reverse. In questo modo l'insegnante ha l'occasione di far notare
 allo studente, e lo esplicita, che per studiare qualsiasi fenomeno fisico
 occorrono chiari riferimenti spaziali e temporali.
 
+\section{Explore}
+Questa fase viene svolta da ciascun studente a casa. Il professore propone agli
+alunni tre attività distinte, attraverso le quali possano arrivare a
+comprendere i concetti citati precedentemente (Inizio Capitolo \ref{posizioni_istanti}).
+
+In primo luogo gli
+studenti dovrebbero cogliere il significato di istante di tempo, o meglio
+\emph{lettura di orologio}\cite{arons1997teaching}
+\footnote{
+           Il linguaggio utilizzato dal docente deve essere il più chiaro possibile, in modo
+           che lo studente possa non fraintendere i concetti. Per esempio utilizzare il
+           termine momenti, invece che letture di orologio, rimanda lo studente ad un
+           concetto di tempo prolungato, non di istante.
+         }
+, e la differenza con intervallo
+di tempo e in secondo luogo il significato di posizione e la differenza con distanza.
+Tutte e tre le attività si basano sull’utilizzo della fotografia
+\footnote{
+          \`E opportuno che il tempo di esposizione per un singolo scatto sia ridotto, al
+            fine di cogliere il concetto di istante temporale.
+         }
+e di grafici.
+
+Emerge dalla letteratura, infatti, che l’utilizzo di grafici risulta essere un
+ottimo strumento per la comprensione di concetti di base della cinematica
+\cite{beichner1994testing}. I grafici possono essere
+utili sia per descrivere il moto di un corpo osservato sia per prevedere il tipo
+di moto a partire dal grafico stesso.
+
+\subsection{Fotografare nel Tempo}
+
+\begin{itemize}
+\item \textbf{Materiale richiesto:} Smartphone, Fogli di Carta
+\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\end{itemize}
+
+La prima attività proposta consiste nel fotografare diversi moti o situazioni
+(minimo 3) scelti dallo studente in vari momenti (possono essere scattate sia
+nella stessa giornata che in giorni differenti), quindi disegnare una linea del
+tempo su un foglio e posizionare le foto scattate secondo i momenti scelti. Non
+occorre scegliere una scala per la linea del tempo, perché interessa che lo
+studente si accorga solo qualitativamente del fatto che possano passare periodi
+di tempo di diversa durata tra eventi diversi. Inoltre in questa attività si
+dovrebbe cogliere che il tempo ha una propria sequenzialità e che ciascuna
+fotografia è un evento che accade in un istante determinato di tempo.
+
+\`E opportuno che il docente guidi gli studenti mostrando loro un paio di esempi
+di quanto richiesto, come una sequenza di foto di una pentola piena d’acqua
+posta sul fuoco o episodi di vita quotidiana (Figura \ref{fig:asse_t_pentola}).
+
+\begin{figure}[H]
+\centering
+  \includegraphics[width=\textwidth]{asse_t_pentola}
+  \caption{Istanti del fenomeno di una pentola piena d'acqua posta sul fuoco,
+           collocati sulla linea del tempo.}
+  \label{fig:asse_t_pentola}
+\end{figure}
+
+\subsection{Fotografare nello Spazio}
+
+\begin{itemize}
+\item \textbf{Materiale richiesto:} Smartphone, Foglio di Carta
+\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\end{itemize}
+
+Come seconda attività viene chiesto di scegliere un punto di partenza su un
+corso o una via ed esplorarla camminando, fotografando palazzi o altri oggetti
+incontrati (almeno 3 oggetti distinti). In seguito si disegni una linea su un
+foglio e si incollino le diverse fotografie in base alla disposizione dei
+soggetti immortalati lungo la via. Anche in questo caso non occorre che la
+linea presenti una scala, in quanto l’obiettivo del lavoro è comprendere il
+concetto di posizione di un corpo nello spazio e, in modo qualitativo, della
+posizione relativa rispetto ad altri oggetti.
+
+Anche in questo caso occorre che il professore mostri almeno uno più esempi
+(Si veda la Figura \ref{fig:asse_s}).
+
+\begin{figure}[H]
+\centering
+  \includegraphics[width=\textwidth]{asse_s}
+  \caption{Vari oggetti immortalati lungo una via e rappresentati
+           sulla linea della posizione.}
+  \label{fig:asse_s}
+\end{figure}
+
+\subsection{Fotografarsi nel Tempo e nello Spazio}
+
+\begin{itemize}
+\item \textbf{Materiale richiesto:} Smartphone, Foglio di Carta
+\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\end{itemize}
+
+Infine, la terza attività consiste nel ripercorrere (dall'inizio alla fine
+senza mai tornare idietro) la medesima via della
+seconda esperienza, scattando dei \emph{selfie} e appuntandosi la lettura di orologio
+corrispondente a ciascuna foto. Viene richiesta una elaborazione grafica in
+analogia a quanto fatto nelle precedenti, senza che l’insegnante ne specifichi
+la struttura finale.
+
+Il professore per questa terza attività mostrerà solamente le fotografie
+scattate, senza mostrare agli studenti il grafico ottenuto, in modo che gli
+studenti possano ragionare su questo caso più complicato.
+Gli studenti dovrebbero essere in grado di capire che per rappresentare
+un corpo (loro stessi) che si muove nello spazio è necesserio utilizzare
+due assi distinti, ovvero un diagramma cartesiano bidimensionale.
+La Figura \ref{fig:piano_s_t} mostra un esempio del risultato atteso.
+
+Tutte e tre le attività sono pensate per essere svolte incollando le fotografie
+su un foglio, perché si ritiene che attraverso questa modalità operativa lo
+studente  possa avere occasione di riflettere e giudicare i risultati ottenuti.
+
+\begin{figure}[ht]
+\centering
+  \includegraphics[width=\textwidth]{piano_s_t}
+  \caption{I \emph{selfie} della terza attività, rappresentati
+           su un piano cartesiano.}
+  \label{fig:piano_s_t}
+\end{figure}
+
 \section{Extend}
 \begin{itemize}
 \item \textbf{Tempo richiesto in aula:} 30\textsuperscript{$\prime$}
