Add explain of positions/istants (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -238,6 +238,92 @@ studente  possa avere occasione di riflettere e giudicare i risultati ottenuti.
   \label{fig:piano_s_t}
 \end{figure}
 
+
+\section{Explain}
+\begin{itemize}
+\item \textbf{Tempo richiesto:} 20\textsuperscript{$\prime$} di discussione tra
+studenti + 30\textsuperscript{$\prime$} di dialogo con il docente
+\end{itemize}
+
+In questa fase viene permesso agli alunni di confrontarsi ed interpretare
+quanto svolto nella fase precedente; il professore può intervenire per spiegare
+o formalizzare alcuni concetti emersi.
+L’insegnante \emph{in primis} suddivide la classe in gruppi di cinque studenti
+\footnote{
+          Per  esperienza degli autori, un numero esiguo o eccessivo di membri
+          di un gruppo di lavoro rende difficile il coinvolgimento di tutti i
+          partecipanti.
+         }
+e assegna
+ciascun gruppo ad un’aula virtuale differente. La piattaforma utilizzata sarà a
+discrezione della scuola
+\footnote{
+          Una possibilità è la piattaforma Zoom\textsuperscript{\textregistered},
+          che  permette facilmente di creare aule virtuali di lavoro.
+         }.
+L’insegnante chiede di
+discutere i grafici ottenuti nelle attività precedenti, confrontandoli, e
+visita le aule virtuali per monitorare il lavoro ed eventualmente indirizzare
+lo sguardo degli alunni con alcune domande. Per esempio: ``Che cosa potreste
+dire della disposizione delle fotografie? Che significato potrebbe avere?''.
+Ogni gruppo inizia quindi un \emph{brainstorming} e sceglie un portavoce,
+il quale ha il  compito di esporre quanto emerso di fronte alla classe riunita
+in un’unica aula virtuale con il professore.
+
+Ciascuno studente nello svolgere la prima attività dovrebbe osservare che
+alcune foto potrebbero essere più ravvicinate tra loro di altre
+\ref{fig:asse_t_pentola}. Si ritiene che la maggioranza
+interpreti la disomogeneità della disposizione delle
+immagini come corrispondente a periodi di tempo di diversa durata tra i diversi
+scatti. Il professore può formalizzare questo concetto utilizzando il termine
+\emph{intervallo di tempo}, lasciando che gli studenti ne diano la definizione.
+Sì osserverà, l’intervallo di tempo sarà dato dalla differenza tra le
+letture di orologio delle due fotografie. Il docente a questo punto può
+domandare se un singolo scatto occupi un intervallo di tempo. Si ritiene che la
+maggior parte degli alunni abbia chiaro che la risposta sia no. La letteratura
+fa intendere che un focus importante è assicurarsi che lo studente comprenda
+che un istante di tempo equivale a \emph{zero} secondi\cite{arons1997teaching}
+\footnote{
+          Qualche alunno potrebbe argomentare il contrario, sostenendo che un singolo scatto
+          occupi un intervallo di tempo molto breve. Questa ipotesi è corretta. Tuttavia,
+          il tempo di un singolo scatto risulta essere su una scala di ordini di
+          grandezza inferiore rispetto a quella utilizzata per l’attività. Per questo
+          motivo si assume ad istante il tempo di una fotografia.
+         }.
+Ciascuna fotografia corrisponde ad un istante di tempo differente.
+
+Dopo aver discusso i risultati della prima attività, risulta più immediato il
+ragionamento sulla seconda. Un maggior numero di studenti è in grado di dire
+che ciascuno oggetto fotografato è in un luogo preciso, cioè occupa una
+posizione definita nello spazio. Alcuni possono costruire un’analogia tra
+l’intervallo di tempo tra uno scatto e l’altro della prima attività e lo spazio
+tra un oggetto e l’altro in questa esperienza. Si ipotizza che qualcuno in
+classe riuscirà a far corrispondere l’aver camminato tra un oggetto incontrato
+e l’altro con il concetto di \emph{distanza}.
+
+Per quanto riguarda la terza esperienza è possibile che molti studenti si siano
+trovati in difficoltà nella parte di rappresentazione grafica, in quanto meno
+guidata delle precedenti. Tuttavia, è plausibile che in qualche gruppo di
+lavoro sia emersa almeno l’impossibilità di utilizzare un’unica linea.
+L’attività, infatti, comprendeva due grandezze differenti: tempo e spazio.
+Nel caso nessun componente della classe sia arrivato ad ipotizzare un grafico
+con due assi, che indicano rispettivamente spazio e tempo, allora il professore
+è legittimato a guidarli in questa scoperta. Egli può far notare loro la
+presenza di due informazioni distinte per ciascuna foto e invitarli ad un
+paragone con i risultati delle prime due attività.
+Inoltre in questa attività vi è un altro aspetto che si ritiene possa emergere
+dalla discussione: il soggetto fotografato. Infatti, gli studenti potrebbero
+osservare che, a differenza delle prime due attività, qui il soggetto è sempre
+lo stesso in ogni scatto, cambiano solo i luoghi in cui si trova e le letture
+di orologio. Dunque, il grafico caratterizzato dai due assi posizione-tempo
+mostra dove si trova il soggetto fissato un istante di tempo, ovvero rappresenta
+il moto di questo corpo. Il professore sottolinea nuovamente l’esistenza di
+due informazioni, la posizione e il tempo, e che esse siano in relazione tra
+loro. Egli in particolare spiega che esse sono legate dal concetto
+di \emph{legge oraria}:  una relazione che determina la posizione occupata da un
+corpo  in moto (sempre il medesimo; in questa attività, sè stessi) ad un istante
+fissato.
+
 \section{Extend}
 \begin{itemize}
 \item \textbf{Tempo richiesto in aula:} 30\textsuperscript{$\prime$}
