Add evaluate of positions/istants (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -364,6 +364,12 @@ e osservando che la posizione dell'oggetto preso come riferimento per tutti gli 
 si chiama \emph{origine} e le tre distanze sono rappresentate da tre numeri lungo
 gli assi, chiamati \emph{coordinate cartesiane} tridimensionali.
 
+\section{Evaluate}
+Per la valutazione di questo primo modulo del percorso il docente tiene conto della
+partecipazione degli studenti alle varie attività proposte, del lavoro svolto sui
+grafici richiesti e del loro coinvolgimento attivo all’interno dei gruppi di discussione.
+
+
 \chapter{Accelerazione, Moto Rettilineo Uniformemente Accelerato}
 \section{Explain}\label{a_explain}
 
