Fix typo (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -356,7 +356,7 @@ e qualche metro più avanti''.
 Al termine di questo processo, il docente ufficializza la conoscenza acquisita disegnando
 \footnote{
 Il professore può disegnare su una lavagna e filmarsi durante l'operazione, oppure
-utilizzare una tavolatta grafica o una lavagna virtuale (presente in software
+utilizzare una tavoletta grafica o una lavagna virtuale (presente in software
 come Zoom\textsuperscript{\textregistered}, ad esempio).
 }
 un diagramma cartesiano tridimensionale, collocando alcuni oggetti al suo interno
