Fix underful hbox (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -417,7 +417,8 @@ al volo e mostrando il risultato agli studenti.
 \begin{figure}[H]
 \centering
   \includegraphics[width=\textwidth]{phyphox}
-  \caption{La schermata dello strumento \emph{Acceleration (Whitout g)}
+  \caption{Uno \emph{screenshot} della schermata dello strumento
+           \emph{Acceleration (Whitout g)}
            nell'applicazione Phyphox.}
   \label{fig:phyphox}
 \end{figure}
