Fix a typo (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -410,7 +410,7 @@ Le biglie utilizzate devono essere tutte uguali tra loro.
   \caption{
            I tre contenitori riempiti con i liquidi
            scelti per l'attività di engage sulla
-           velocità: detersivo, acua, olio di semi.
+           velocità: detersivo, acqua, olio di semi.
           }
   \label{fig:liquids}
 \end{figure}
